--- a/index.html
+++ b/index.html
@@ -3,34 +3,19 @@
   <head>
     <meta charset="UTF-8"/>
     <title>Document</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-      body {
-      margin: 0;
-      padding: 0;
-      display: flex;
-      }
-      button {
-      flex-grow: 0;
-      box-shadow: 0;
-      border: 0;
-      background: #dfdf66;
-      width: 33vw;
-      height: 100vh;
-      opacity: 0.4;
-      transition: opacity 300ms ease-in;
-      }
-      button:active, button.active {
-      transition: opacity 50ms ease-out;
-      opacity: 1;
-      }
-      button:nth-child(2) { background: #66aaff; }
-      button:nth-child(3) { background: #00dd88; }
-
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <link href="sss.css" rel="stylesheet"/>
   </head>
   <body>
-
     <script src="cmd.js"></script>
+    <script src="fastclick.js"></script>
+    <script type="application/javascript">
+      if ('addEventListener' in document) {
+      document.addEventListener('DOMContentLoaded', function() {
+      FastClick.attach(document.body);
+      }, false);
+      }
+      
+    </script>
   </body>
 </html>
