Have fastcick through cdn

--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
   </head>
   <body>
     <script src="cmd.js"></script>
-    <script src="fastclick.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.min.js"></script>
     <script type="application/javascript">
       if ('addEventListener' in document) {
       document.addEventListener('DOMContentLoaded', function() {
       FastClick.attach(document.body);
       }, false);
       }
-      
     </script>
   </body>
 </html>
