--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8"/>
-    <title>Document</title>
+    <title>s1mon says</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="sss.css" rel="stylesheet"/>
   </head>
