--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="sss.css" rel="stylesheet"/>
   </head>
   <body>
-    <script src="cmd.js"></script>
+    <script src="build/i.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.min.js"></script>
     <script type="application/javascript">
       if ('addEventListener' in document) {
