--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <title>s1mon says</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <link href="sss.css" rel="stylesheet"/>
+    <link href="main.css" rel="stylesheet"/>
   </head>
   <body>
     <script src="build/i.js"></script>
